<resources>
    <string name="app_name">TrackMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_github">Github</string>
    <string name="menu_communicate">Communicate</string>

    <string name="empty_list">There are no items to show</string>
    <string name="is_entrance">Is entrance:</string>
    <string name="is_restricted">Is restricted</string>
    <string name="is_employee">Is employee</string>
    <string name="status_taken">Taken</string>
    <string name="status_not_taken">Available</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!-- menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_statistic">Statistics</string>
    <string name="menu_restricted_obs">Restricted observations</string>
    <string name="edit_profile">Edit profile</string>
    <string name="reader_stat">Reader statistic</string>
    <string name="restricted_obs">Recent restricted observations</string>

    <!--auth-->
    <string name="login_main_header">Welcome</string>
    <string name="login_secondary_header">Sign in to open a world of shared items</string>
    <string name="register_secondary_header">Sign up to open a world of shared items</string>
    <string name="signInHeader">Sign in with credentials</string>
    <string name="signUpHeader">Sign up with credentials</string>
    <string name="loginPlaceholder">Login</string>
    <string name="passPlaceholder">Password</string>
    <string name="companyNamePlaceholder">Company name</string>
    <string name="emailPlaceholder">Email</string>
    <string name="passConfirmPlaceholder">Confirm password</string>
    <string name="signInBtn">Sign in</string>
    <string name="signUpBtn">Sign up</string>
    <string name="signUpRedirect">Create new account</string>
    <string name="signInRedirect">Login into account</string>
    <string name="registerSuccess">Registration successful!</string>

    <!-- profile -->
    <string name="online_status">Online</string>
    <string name="user_information_header">User information</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="contact_information_header">Contact information</string>
    <string name="company_name">Company name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>

    <!--preferences-->
    <string name="user_pref">token_pref</string>
    <string name="token">token_key</string>
    <string name="id">id_key</string>

    <!--error codes-->
    <string name="validation_error">"Validation error occurred"</string>
    <string name="code_116">Username or password is incorrect</string>
    <string name="code_123">Login is already taken</string>
    <string name="code_124">Email is already taken</string>
    <string name="fetch_err">Fetching error</string>
    <string name="update_success">"Update profile success"</string>

    <!-- bundle keys -->
    <string name="reader_id">reader_id</string>
    <string name="account_data">account_data</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
