<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_reader"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_restricted_obs"
            android:icon="@drawable/ic_restricted"
            android:title="@string/menu_restricted_obs" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_github"
                android:title="@string/menu_github" />
        </menu>
    </item>

</menu>
