<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:importantForAutofill="noExcludeDescendants"
    tools:ignore="UnusedAttribute">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/login_bg"
        >

        <LinearLayout
            tools:context=".RegisterActivity"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_main_header" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/register_secondary_header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/secondary">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="@string/signUpHeader"
                        android:textSize="10sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#C0C0C0"/>

                    <EditText
                        android:id="@+id/loginEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/loginPlaceholder"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/companyNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/companyNamePlaceholder"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/emailPlaceholder"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/passEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="30dp"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/passPlaceholder"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/passConfirmEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/passConfirmPlaceholder"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/sign_up_btn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/signUpBtn" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sign_in_redirect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:text="@string/signInRedirect"
                android:textColor="@color/defaultColor"
                />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/spinner"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>
