<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:importantForAutofill="noExcludeDescendants"
    tools:ignore="UnusedAttribute">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.EditProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:background="@color/success"
                android:padding="15dp"
                android:paddingStart="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        tools:src="@tools:sample/avatars"
                        android:layout_gravity="start"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="15dp">

                        <TextView
                            android:id="@+id/login_top"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/online_status"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_information_header"
                        android:textColor="@color/success"
                        android:layout_marginBottom="20dp"
                        />

                    <!-- login -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/loginEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:layout_marginBottom="5dp"
                        />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/separatorColor" />

                    <!-- email -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:layout_marginBottom="5dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_information_header"
                        android:textColor="@color/success"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        />

                    <!-- companyName -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/companyNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:layout_marginBottom="5dp"
                        />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/separatorColor" />


                    <!-- address -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/addressEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:layout_marginBottom="5dp"
                        />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/separatorColor" />



                    <!-- phone -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/phoneEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:layout_marginBottom="5dp"
                        />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/separatorColor" />

                    <!-- description -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/descriptionEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:layout_marginBottom="5dp"
                        />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_save"
            android:backgroundTint="@color/success"
            />

    </FrameLayout>

    <include
        android:id="@+id/spinner"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>