<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.statistic.ReaderStatisticFragment"
    android:importantForAutofill="noExcludeDescendants"
    tools:ignore="UnusedAttribute">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="25dp">


                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_reader"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultColor"
                        android:text="Company name"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description of the amazing company"
                        />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/is_entrance"/>

                        <TextView
                            android:id="@+id/isEntrance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/defaultColor"
                            android:layout_marginStart="3dp"
                            android:text="@string/yes"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/observationsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.availableServices.AvailableServiceFragment"
            tools:listitem="@layout/reader_observation_item"
            />

        <TextView
            android:id="@+id/empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <include
        android:id="@+id/spinner"
        android:visibility="gone"
        layout="@layout/progress_dialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>
